react-front/src/App.css
.PostForm {
    max-width: 20%;
    margin-left: 5px;
}

.container {
    margin-left: 1%;
    margin-right: 1%;
}

.Contents {
    left: 5%;
    position: absolute;
    padding: 5%;
    min-width: 90%;
    min-height: 110vh;
    height: auto;
    width: 90%;
    background-color: rgba(255,255,255,0.95);
}

#body {
    background-image: url("./images/background2.jpeg");
}

.Wrapper {
    width: 100%;
    height:118vh;
    background-size: cover;
}

.navbar {
    margin-bottom: 0;
    border-radius: 0;
    background-color: rgba(77, 76, 76, 0.719);
    padding: 0;
    border: 0;
    min-height: 8vh;
    text-align: center;
    margin:auto;
}

.NavHeader {
    position: relative;
    font-family: Verdana, Geneva, sans-serif;
    font-weight: 600;
    padding: 0;
    font-size: 16px; 
    font-size: 1vw;
    padding: 25%;
}

.navbar-default .navbar-brand {
    color: rgb(241, 241, 241);
}

.PostForm {
    float: right;
    min-width: 20%;
    margin-right: 10%;
}

.Tips {
    float: left;
    width: 30%;
}


h1 {
    font-family: "Arial Black", Gadget, sans-serif;
    color: rgb(95, 95, 95);
}

h2 {
    font-family: "Arial Black", Gadget, sans-serif;
    color: rgb(95, 95, 95);
}

a:hover {
    text-decoration: none;
}

